--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
             <img src="https://img1.cloudokids.cn/newimg/20181110/1541841004492833.jpg">
         </div>
         <div class="about-desc">
-            <p>河南广拓装饰工程有限公司成立于2014年4月，&nbsp;是河南知名的装饰工程施工的企业，近年来，&nbsp;主要从事高铁站雨棚装饰吊顶，&nbsp;已先后完成西安北站、郑州东站、杭州南站等20余项大型优质项目雨棚吊顶施工作业&nbsp;，公司在城市园林绿化，钢结构施工方向也有丰富的施工项目经验，实力浑厚，敬请合作。</p>
+            <p>河南广拓装饰工程有限公司成立于2014年4月，&nbsp;是河南知名的装饰工程施工的企业，近年来，&nbsp;主要从事高铁站雨棚装饰吊顶，&nbsp;已先后完成西安北站、郑州东站、杭州南站、重庆北站等20余项大型优质项目雨棚吊顶施工作业&nbsp;，公司在城市园林绿化，钢结构施工方向也有丰富的施工项目经验，实力浑厚，敬请合作。</p>
             <p>公司主要经营范围包括：室内外装饰装修、装饰设计；钢结构工程施工；水电安装工程施工；园林绿化工程施工；土石方工程施工等。</p>
             <p>起初，我们只是凭着对设计的热爱，对事业的执着，对信念的坚定前行，公司在发展壮大的过程中，逐渐清晰了自己的目标和使命。为员工营造一个身心愉悦、实现自身价值的成长空间；为精英团队提供一个释放才华、实现理想的广阔平台。为客户创造更大的价值，为社会承担更多的责任。</p>
         </div>
