--- a/guangtuo/index.html
+++ b/guangtuo/index.html
@@ -149,7 +149,7 @@
                     <dt data-node-id="ne4f9d184584c4e91a544e81062cb1fca"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841004492833.jpg?version=9d81126b153843a5b2daaebe7cb6cbc7" alt="" data-node-id="n7e749d3a127e4711992f9ef2d4263a43"></dt>
                     <dd data-node-id="n650e609cfd4d4746a69a035a1ae3c937">
                         <h2 data-node-id="nde5ff909e42e481aa73d7f3f4a46b8cf"><span data-node-id="na9620b639d9f48dfaca48fe4a5f4f228">河南广拓装饰工程有限公司</span></h2>
-                        <p data-node-id="n00e18be8e8234706acaa864dfe9a3ffa">河南广拓装饰工程有限公司成立于2014年4月，是河南知名的装饰工程施工的企业，近年来，主要从事高铁站雨棚装饰吊顶，在此领域，已先后完成西安北站、郑州东站、杭州南站等20余项大型优质项目&nbsp;，&nbsp;公司在城市园林绿化，钢结构施工方向也有丰富的施工项目经验，实力浑厚，敬请合作。</p>
+                        <p data-node-id="n00e18be8e8234706acaa864dfe9a3ffa">河南广拓装饰工程有限公司成立于2014年4月，是河南知名的装饰工程施工的企业，近年来，主要从事高铁站雨棚装饰吊顶，在此领域，已先后完成西安北站、郑州东站、杭州南站、重庆北站等20余项大型优质项目&nbsp;，&nbsp;公司在城市园林绿化，钢结构施工方向也有丰富的施工项目经验，实力浑厚，敬请合作。</p>
                     </dd>
                 </dl>
             </div>
